[gd_scene load_steps=22 format=3 uid="uid://dydutq3tmfiqb"]

[ext_resource type="Script" uid="uid://bmhkoxgk34s66" path="res://game.gd" id="1_eow3j"]
[ext_resource type="Script" uid="uid://cr6gmxnwef31v" path="res://global_camera.gd" id="1_feb5d"]
[ext_resource type="PackedScene" uid="uid://yae4e6mgm8" path="res://player.tscn" id="2_e2o6t"]
[ext_resource type="PackedScene" uid="uid://bqxcfr14wgrbj" path="res://Levels/level_05.tscn" id="2_e8heu"]
[ext_resource type="Material" uid="uid://dqdpgo8rjq5wh" path="res://split_screen_shader.tres" id="2_fc0e3"]
[ext_resource type="PackedScene" uid="uid://dfvliycwdkld8" path="res://Levels/level_01.tscn" id="2_j5wjh"]
[ext_resource type="PackedScene" uid="uid://do8gju3jt67mn" path="res://Levels/level_03.tscn" id="2_lc2xo"]
[ext_resource type="PackedScene" uid="uid://udoh6utyab7k" path="res://Levels/maze_b02.tscn" id="2_vef74"]
[ext_resource type="PackedScene" uid="uid://dmjyqka8arjqp" path="res://Levels/maze_r01.tscn" id="3_mfdv2"]
[ext_resource type="Script" uid="uid://qg205yehq5b0" path="res://fake_pointer.gd" id="3_ryrav"]
[ext_resource type="PackedScene" uid="uid://d3owxiw4ikfh1" path="res://Levels/test_level.tscn" id="4_fc0e3"]
[ext_resource type="Texture2D" uid="uid://bhyixy3mprmr4" path="res://icon.svg" id="5_7jktm"]
[ext_resource type="PackedScene" uid="uid://c8srb7rfa5v7n" path="res://Levels/maze_b01.tscn" id="5_hve3p"]
[ext_resource type="PackedScene" uid="uid://cbr5ucyce65ur" path="res://Levels/level_02.tscn" id="7_iotsf"]
[ext_resource type="PackedScene" uid="uid://b2vp4nbidgo4j" path="res://Levels/level_04.tscn" id="8_7sc4i"]
[ext_resource type="PackedScene" uid="uid://dmw1mbmy0v685" path="res://Levels/level_final.tscn" id="8_215e1"]
[ext_resource type="AudioStream" uid="uid://2ybxeoi4llbe" path="res://Assets/song18.mp3" id="16_80cx4"]

[sub_resource type="Gradient" id="Gradient_feb5d"]
colors = PackedColorArray(0.212966, 0.301034, 0.611793, 1, 0.835548, 0.00594145, 0.718405, 1)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ryrav"]
size = Vector2(640, 360)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_fc0e3"]
size = Vector2(640, 360)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fc0e3"]
size = Vector2(1, 1)

[node name="Node2D" type="Node2D" groups=["game"]]
script = ExtResource("1_eow3j")
levels = Array[PackedScene]([ExtResource("5_hve3p"), ExtResource("3_mfdv2"), ExtResource("2_vef74"), ExtResource("2_j5wjh"), ExtResource("7_iotsf"), ExtResource("2_lc2xo"), ExtResource("8_7sc4i"), ExtResource("2_e8heu"), ExtResource("8_215e1")])

[node name="GlobalCamera" type="Node2D" parent="."]
script = ExtResource("1_feb5d")

[node name="Line2D" type="Line2D" parent="GlobalCamera"]
visible = false
z_index = 5
points = PackedVector2Array(1, 1, 640, 360)
width = 3.0
default_color = Color(1, 0.0627451, 1, 1)
gradient = SubResource("Gradient_feb5d")

[node name="Sprite2D" type="Sprite2D" parent="GlobalCamera"]
visible = false
material = ExtResource("2_fc0e3")
position = Vector2(320, 180)
scale = Vector2(640, 320)
texture = SubResource("PlaceholderTexture2D_ryrav")

[node name="TextureRect" type="TextureRect" parent="GlobalCamera"]
z_index = 1
material = ExtResource("2_fc0e3")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_fc0e3")

[node name="Viewport1" type="SubViewport" parent="GlobalCamera"]
handle_input_locally = false
snap_2d_transforms_to_pixel = true
size = Vector2i(640, 360)
render_target_update_mode = 3

[node name="FakePointer" type="Area2D" parent="GlobalCamera/Viewport1"]
visible = false
input_pickable = false
script = ExtResource("3_ryrav")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GlobalCamera/Viewport1/FakePointer"]
shape = SubResource("RectangleShape2D_fc0e3")

[node name="Sprite2D" type="Sprite2D" parent="GlobalCamera/Viewport1/FakePointer"]
z_index = 2
scale = Vector2(0.0847521, 0.090535)
texture = ExtResource("5_7jktm")

[node name="TestLevel" parent="GlobalCamera/Viewport1" instance=ExtResource("4_fc0e3")]

[node name="Player1" parent="GlobalCamera/Viewport1" node_paths=PackedStringArray("other") instance=ExtResource("2_e2o6t")]
position = Vector2(-7, 43)
is_main = true
offset = Vector2(0, -960)
other = NodePath("../Player2")

[node name="Camera1_link" type="RemoteTransform2D" parent="GlobalCamera/Viewport1/Player1"]
remote_path = NodePath("../../Camera1")

[node name="Player2" parent="GlobalCamera/Viewport1" node_paths=PackedStringArray("other") instance=ExtResource("2_e2o6t")]
position = Vector2(-7, 43)
offset = Vector2(0, 960)
other = NodePath("../Player1")

[node name="Camera1" type="Camera2D" parent="GlobalCamera/Viewport1"]
position = Vector2(-7, 43)
limit_left = -595
limit_top = -325
limit_right = 550
limit_bottom = 325
drag_horizontal_enabled = true
drag_vertical_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="GlobalCamera/Viewport1/Camera1"]
remote_path = NodePath("../../../Viewport2/Camera2")

[node name="Viewport2" type="SubViewport" parent="GlobalCamera"]
handle_input_locally = false
snap_2d_transforms_to_pixel = true
size = Vector2i(640, 360)
render_target_update_mode = 3

[node name="Camera2" type="Camera2D" parent="GlobalCamera/Viewport2"]
position = Vector2(-7, 43)
offset = Vector2(0, 960)
limit_left = -595
limit_top = -325
limit_right = 550
limit_bottom = 325
drag_horizontal_enabled = true
drag_vertical_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GlobalCamera"]
stream = ExtResource("16_80cx4")
volume_db = -20.0
autoplay = true
parameters/looping = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
